--- a/src/styleSheets/App.css
+++ b/src/styleSheets/App.css
@@ -10,6 +10,30 @@
     position: fixed;
     top: 0;
     left: 0;
+    animation-name: fade-in-animation;
+    animation-duration: 1s;
+}
+
+.shop-overlay-hide{
+    animation-name: fade-out-animation;
+    animation-duration: 600ms;
+}
+@keyframes fade-in-animation{
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out-animation{
+    100% {
+        opacity: 0;
+    }
+    0% {
+        opacity: 1;
+    }
 }
 
 .shop-cart-bar{
@@ -28,8 +52,9 @@
 
 }
 
-.shop-cart-bar.hide {
+.shopping-bar-hide {
     animation-name: slide-out;
+    animation-duration: 600ms;
   }
 
 @keyframes slide-in{
@@ -40,7 +65,6 @@
 
 @keyframes slide-out {
     0% { transform: translateX(0); }
-    50% { transform: translateX(1.5rem); }
     100% { transform: translateX(40rem); }
 }
 
@@ -126,7 +150,7 @@
 
 .checkout-btn:hover{
     cursor: pointer;
-    background-color: #fde68a;
+    background-color: #3b82f6;
 }
 
 .subtotal-div{
