--- a/src/styleSheets/Shop.css
+++ b/src/styleSheets/Shop.css
@@ -1,28 +1,45 @@
 .item-listing{
     display: flex;
     justify-content: center;
-    padding: 0.5rem;
+    padding: 3rem;
+    
 }
 
 
 .shop-items-container{
     display: flex;
     padding: 0;
-    gap: 4rem;
     flex-wrap: wrap;
 
 }
 
 .shop-items{
-    width: 19rem;
-    height: auto;
+    width: 18rem;
+    height: 27rem;
     padding: 0.5rem;
-    border: 2px solid black;
+    margin: 1rem 1.3rem;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    
 
 }
+.shop-items:hover{
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+    animation-name: fade-in-animation-shop-items;
+    animation-duration: 500ms;
+}
+
+@keyframes fade-in-animation-shop-items{
+    0% {
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
+    100% {
+        box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+    }
+}
+
 
 .items-img-container{
-    height: 60%;
+    height: 40%;
    overflow: hidden;
    padding: 1rem;
    overflow: hidden;
@@ -35,19 +52,64 @@
     object-fit: contain;
 }
 
-
 .item-details{
-    display: flex;
-    flex-direction: column;
-    gap: -1rem;
+    padding: 1rem;
+}
+
+.shop-item-title{
+    height: 3.6rem;
+    
+    overflow: hidden;
+}
+.shop-item-title > p{
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .item-price{
     color: #B12704;
 }
 
-.item-details > p {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.item-price-section{
+    display: flex;
+    gap: 2rem;
+    padding: 2rem 0.9rem 0 0 ;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.rating-tag{
+    background-color: green;
+    color: white;
+    width: 2rem;
+    text-align: center;
+    border-radius: 7px;
+    padding: 0.1rem;
+}
+
+.item-price-section > button{
+    cursor: pointer;
+    border-style: none;
+    padding: 0.5rem ;
+    border-radius: 7px;
+    border: 1px solid #3b82f6;
+}
+.item-price-section > button:hover{
+    background-color: #3b82f6;
+    color: white;
+    
+    animation-name: fade-in-animation-btn;
+    animation-duration: 500ms;
+}
+
+
+@keyframes fade-in-animation-btn{
+    0% {
+        background-color: white;
+        color: black;
+    }
+    100% {
+        background-color: #3b82f6;
+        color: white;
+    }
 }
