--- a/src/styleSheets/App.css
+++ b/src/styleSheets/App.css
@@ -1,9 +1,7 @@
-.shop-body{
-    display: flex;
-}
+
 
 .shop-overlay{
-    
+    z-index: 2;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.595);
@@ -12,6 +10,7 @@
     left: 0;
     animation-name: fade-in-animation;
     animation-duration: 1s;
+    backdrop-filter: blur(10px);
 }
 
 .shop-overlay-hide{
@@ -37,6 +36,7 @@
 }
 
 .shop-cart-bar{
+    z-index: 3;
     position: fixed;
     width: 25rem;
     height: 100vh;
@@ -45,9 +45,10 @@
     right: 0;
     z-index: 1000;
     overflow: auto;
-    padding: 0 5rem;
+    padding: 3rem 5rem;
     animation-name: slide-in;
     animation-duration: 1s;
+    
     
 
 }
