--- a/src/styleSheets/Shop.css
+++ b/src/styleSheets/Shop.css
@@ -104,15 +104,16 @@
 }
 
 .item-price-section > button{
-    cursor: pointer;
     border-style: none;
     padding: 0.5rem ;
     border-radius: 7px;
-    border: 1px solid #3b82f6;
+    border: 2px solid #3b82f6;
+    color: #3b82f6;
 }
 .item-price-section > button:hover{
     background-color: #3b82f6;
     color: white;
+    cursor: pointer;
     
     animation-name: fade-in-animation-btn;
     animation-duration: 500ms;
