--- a/src/styleSheets/homePage.css
+++ b/src/styleSheets/homePage.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
+
 .homePageStyle{
-    padding-top: 3rem;
     animation-name: fade-in-animation-shopCart;
     animation-duration: 500ms;
+
 }
 
 @keyframes fade-in-animation-shopCart{
@@ -13,4 +15,237 @@
         opacity: 1;
         transform: translateX(0);
     }
+}
+
+.homePage-top{
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+    background-color:#3b83f62c;
+
+}
+
+
+.heroDiv{
+    overflow: hidden;
+    width: 40rem;
+    height: 100%;
+    
+}
+
+.heroDiv > img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    filter: grayscale(100%);
+    animation-name: fade-in-animation-heroPic;
+    animation-duration: 500ms;
+}
+
+@keyframes fade-in-animation-heroPic{
+    0% {
+        opacity: 0;
+    }
+    50%{
+        opacity: 0;
+        transform: translateX(2rem);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.homePage-top-contents{
+    padding: 9rem 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    
+}
+
+.hm-top-cnts-heading-txt1{
+    padding-left: 4rem;
+    font-size: 2.4rem;
+}
+.hm-top-cnts-heading-txt2{
+    font-size: 3rem;
+    font-family: 'Inter', sans-serif;
+
+}
+.hm-top-cnts-heading-txt3{
+    font-size: 2.4rem;
+    padding-left: 17rem;
+}
+.call-to-action-part{
+    padding-left: 5rem;
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+}
+
+.shop-btn-div {
+    padding: 1.5rem;
+    border-radius: 60px;
+    background-color: black;
+    position: relative;
+    width: 11.3rem;
+    height: 0.3rem;
+}
+
+.shop-btn-div:hover {
+    cursor: pointer;
+    background-color: #3b82f6;
+    animation-name: layer-style-animation;
+    animation-duration: 500ms;
+    transform: translate(-0.45rem, 0.45rem);
+}
+
+@keyframes layer-style-animation {
+    0% {
+        transform: translate(0);
+    }
+    100% {
+        background-color: #3b82f6;
+        transform: translate(-0.45rem, 0.45rem);
+    }
+}
+
+.shop-btn {
+    background-color: white;
+    border: 2px solid black;
+    padding: 0.9rem;
+    width: 12rem;
+    border-radius: 45px;
+    text-decoration: none;
+    color: black;
+    position: absolute;
+    font-size: 1rem;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    transform: translate(-1rem, -1.8rem);
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.shop-btn:hover {
+    color: #3b82f6;
+    animation-name: btn-text-blue;
+    animation-duration: 500ms;
+    transform: translate(-0.3rem, -2.5rem);
+    border: 2px solid #3b82f6;
+}
+
+@keyframes btn-text-blue {
+    0% {
+        color: black;
+        transform: translate(-1rem, -1.8rem);
+    }
+    100% {
+        color: #3b82f6;
+        border: 2px solid #3b82f6;
+        transform: translate(-0.3rem, -2.5rem);
+    }
+}
+
+
+
+.call-to-action-part > img{
+    animation: arrow-animator 1s infinite ease-in-out;
+}
+
+@keyframes arrow-animator {
+    0%,30%{
+        transform: translate(0);
+    }
+    55%{
+        transform: translate(1rem,0);
+    }
+    100%{
+        transform: translate(0);
+    }
+}
+
+
+
+.home-carousel{
+    display: flex;
+    white-space: nowrap;
+    background-color: #082f49;
+    color: white;
+    font-size: 2.5rem;
+    overflow: hidden;
+    text-transform: uppercase;
+    
+}
+
+.home-carousel-slide{
+    display: flex;
+    white-space: nowrap;
+    animation: 9s slide infinite linear;
+}
+
+.home-carousel-slide > h2{
+    padding: 0 20rem;
+}
+
+@keyframes slide {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
+
+
+
+.hmPg-container{
+    display: flex;
+    padding: 7rem 9rem;
+    gap: 10rem;
+}
+
+.hmPg-container-text{
+    padding: 2.5rem 4.5rem 2.5rem 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.7rem;
+}
+
+.hmPg-container-text > h2{
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+.hmPg-container-text > p{
+    font-size: 0.85rem;
+}
+
+
+.bold-text{
+    font-family: 'Inter', sans-serif;
+    font-weight: 900;
+}
+
+
+.hmPg-container-img_btn{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.fakeStoreApi-container{
+    position: relative;
+}
+
+
+.fakeStoreApi-txt{
+    position: absolute;
+    color:white;
+    text-align: center;
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    top:1.5rem;
+    left: 2.3rem;
 }
