--- a/src/styleSheets/index.css
+++ b/src/styleSheets/index.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 *{
+    padding: 0;
+    margin: 0;
     font-family: 'Montserrat', sans-serif;
 
+}
+
+html, body{
+    height: 100%;
+    width: 100%;
 }
