--- a/src/styleSheets/navBar.css
+++ b/src/styleSheets/navBar.css
@@ -9,8 +9,19 @@
     gap: 1rem;
     top:0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.668);
+    background-color: #3b83f610;
     backdrop-filter: blur(5px);
+}
+
+.navbarLogo{
+    width: 80%;
+    text-transform: uppercase;
+}
+.navbarLogo > a {
+    text-decoration: none;
+    color: #3b82f6;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
 .navBar > ul{
