--- a/src/styleSheets/Shop.css
+++ b/src/styleSheets/Shop.css
@@ -3,6 +3,7 @@
     animation-duration: 500ms;
 }
 
+
 @keyframes fade-in-animation-shopCart{
     0% {
         opacity: 0;
@@ -13,6 +14,7 @@
         transform: translateX(0);
     }
 }
+
 
 .item-listing{
     display: flex;
@@ -29,15 +31,8 @@
 
 }
 
-.shop-items{
-    width: 18rem;
-    height: 27rem;
-    padding: 0.5rem;
-    margin: 1rem 1.3rem;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    
 
-}
+
 .shop-items:hover{
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
     animation-name: fade-in-animation-shop-items;
@@ -53,13 +48,14 @@
     }
 }
 
-
 .items-img-container{
     height: 40%;
    overflow: hidden;
    padding: 1rem;
    overflow: hidden;
 }
+
+
 
 .items-img-container > img{
     
@@ -120,13 +116,66 @@
 }
 
 
-@keyframes fade-in-animation-btn{
-    0% {
-        background-color: white;
-        color: black;
+
+@media only screen and (min-width: 767px) {
+
+    .shop-items{
+        width: 18rem;
+        height: 27rem;
+        padding: 0.5rem;
+        margin: 1rem 1.3rem;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        
+    
     }
-    100% {
-        background-color: #3b82f6;
-        color: white;
+
+
+
+
+    @keyframes fade-in-animation-btn{
+        0% {
+            background-color: white;
+            color: black;
+        }
+        100% {
+            background-color: #3b82f6;
+            color: white;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 767px) {
+
+    .shop-items{
+        width: 90vw;
+        height: 10rem;
+        padding: 0.5rem;
+        margin: 1rem 1.3rem;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        
+    
+    }
+
+    .shop-items-container{
+        flex-direction: column;
+    }
+
+
+    .shop-items{
+        display: flex;
+    }
+
+
+    .items-img-container{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       width: 10rem;
+    }
+
+
+    .item-details{
+        width: 30rem;
     }
 }
