--- a/src/styleSheets/App.css
+++ b/src/styleSheets/App.css
@@ -39,6 +39,7 @@
     position: fixed;
     animation-name: slide-in;
     animation-duration: 1s;
+    overflow: auto;
 }
 
 .shopping-bar-hide {
@@ -212,7 +213,6 @@
         background-color: white;
         top: 0;
         padding: 1rem 3rem;
-        overflow: hidden;
         animation-name: slide-in;
         animation-duration: 1s;
     }
