--- a/src/styleSheets/homePage.css
+++ b/src/styleSheets/homePage.css
@@ -439,7 +439,8 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        padding: 2rem 0.5rem ;
-        text-align: center;
+        padding: 6rem 0.5rem 1rem 0.5rem;
+        text-align: left;
+
     }
 }
