--- a/src/styleSheets/homePage.css
+++ b/src/styleSheets/homePage.css
@@ -438,9 +438,12 @@
     .hmPg-container-text{
         display: flex;
         flex-direction: column;
-        gap: 1rem;
-        padding: 6rem 0.5rem 1rem 0.5rem;
+        gap: 3rem;
+        padding: 6rem 2rem;
         text-align: left;
 
+    }
+    .hmPg-container-text > p {
+        line-height: 1.8rem;
     }
 }
